--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -41,8 +41,12 @@
                 android:name="org.cyanogenmod.settings.summary.receiver"
                 android:value="com.cyanogenmod.settings.doze.DozeReceiver" />
             <meta-data
-                android:name="org.cyanogenmod.settings.summary.key"
-                android:value="doze_device_settings" />
+
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_doze" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/ambient_display_enable_summary" />
+
         </activity>
 
     </application>
